Starting on codegen

--- a/sqorm-demo-web/pom.xml
+++ b/sqorm-demo-web/pom.xml
@@ -38,5 +38,27 @@
 
     <build>
         <finalName>sqorm-demo-web</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.3.2</version>
+                <executions>
+                    <execution>
+                        <id>generate</id>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <phase>generate-sources</phase>
+                        <configuration>
+                            <mainClass>net.squarelabs.sqorm.codegen.Generator</mainClass>
+                            <arguments>
+                                <argument>net.squarelabs.sqorm.demo</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
     </build>
 </project>
