--- a/sqorm-demo-web/pom.xml
+++ b/sqorm-demo-web/pom.xml
@@ -29,6 +29,11 @@
             <version>3.1.0</version>
         </dependency>
         <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.13</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>3.8.1</version>
