--- a/sqorm-demo-web/src/main/webapp/WEB-INF/web.xml
+++ b/sqorm-demo-web/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,13 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+
+    <servlet>
+        <servlet-name>CustomerServlet</servlet-name>
+        <servlet-class>net.squarelabs.sqorm.demo.CustomerServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>CustomerServlet</servlet-name>
+        <url-pattern>/GetCustomer</url-pattern>
+    </servlet-mapping>
 </web-app>
