Working on database abstraction

--- a/sqorm-demo-web/src/main/webapp/WEB-INF/web.xml
+++ b/sqorm-demo-web/src/main/webapp/WEB-INF/web.xml
@@ -13,4 +13,17 @@
         <servlet-name>CustomerServlet</servlet-name>
         <url-pattern>/GetCustomer</url-pattern>
     </servlet-mapping>
+    
+    <listener>
+        <listener-class>net.squarelabs.sqorm.demo.StartupListener</listener-class>
+    </listener>
+
+    <context-param>
+        <param-name>sql.driver</param-name>
+        <param-value>com.mysql.jdbc.Driver</param-value>
+    </context-param>
+    <context-param>
+        <param-name>sql.connection.string</param-name>
+        <param-value>jdbc:mysql://127.0.0.1/sqorm?allowMultiQueries=true&amp;user=sqorm&amp;password=sqorm</param-value>
+    </context-param>
 </web-app>
