--- a/sqorm-lib/pom.xml
+++ b/sqorm-lib/pom.xml
@@ -51,9 +51,9 @@
             <version>1.4</version>
         </dependency>
         <dependency>
-            <groupId>org.postgresql</groupId>
+            <groupId>postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>9.2-1003-jdbc4</version>
+            <version>9.1-901-1.jdbc4</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
