--- a/sqorm-demo-web/pom.xml
+++ b/sqorm-demo-web/pom.xml
@@ -60,8 +60,12 @@
                             <arguments>
                                 <argument>${basedir}/target/generated-sources</argument>
                                 <argument>net.squarelabs.sqorm.demo</argument>
+                                <!--
                                 <argument>com.mysql.jdbc.Driver</argument>
                                 <argument>jdbc:mysql://127.0.0.1/sqorm?allowMultiQueries=true&amp;user=sqorm&amp;password=sqorm</argument>
+                                -->
+                                <argument>org.postgresql.Driver</argument>
+                                <argument>jdbc:postgresql://127.0.0.1/sqorm?user=sqorm&amp;password=sqorm</argument>
                             </arguments>
                         </configuration>
                     </execution>
