--- a/sqorm-lib/pom.xml
+++ b/sqorm-lib/pom.xml
@@ -21,6 +21,11 @@
             <version>1.9.13</version>
         </dependency>
         <dependency>
+            <groupId>bouncycastle</groupId>
+            <artifactId>bcprov-jdk14</artifactId>
+            <version>138</version>
+        </dependency>
+        <dependency>
             <groupId>com.googlecode.flyway</groupId>
             <artifactId>flyway-core</artifactId>
             <version>2.0.3</version>
